# vinosports

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements-test.txt  tailwind.config.js
apps/epl/: Dockerfile  entrypoint.sh  pyproject.toml
apps/epl/activity/: apps.py  consumers.py  context_processors.py  models.py  tasks.py  urls.py  views.py
apps/epl/betting/: admin.py  apps.py  badges.py  context_processors.py  forms.py  models.py  odds_engine.py  signals.py  stats.py  tasks.py  urls.py  views.py
apps/epl/bots/: admin.py  apps.py  comment_service.py  models.py  personas.py  registry.py  services.py  strategies.py  tasks.py
apps/epl/challenges/: engine.py  tasks.py  urls.py  views.py
apps/epl/config/: asgi.py  celery.py  settings.py  urls.py
apps/epl/discussions/: apps.py  models.py  urls.py  views.py
apps/epl/matches/: admin.py  apps.py  consumers.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/epl/rewards/: apps.py  consumers.py  routing.py  urls.py
apps/epl/users/: avatars.py  forms.py
apps/epl/website/: apps.py  challenge_engine.py  challenge_urls.py  context_processors.py  theme.py  urls.py  views.py
apps/nba/: Dockerfile  pyproject.toml
apps/nba/activity/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
apps/nba/betting/: admin.py  apps.py  balance.py  context_processors.py  forms.py  models.py  odds_engine.py  services.py  settlement.py  signals.py  tasks.py  urls.py  views.py
apps/nba/bots/: admin.py  apps.py  models.py  personas.py  schedule.py  services.py  strategies.py  tasks.py
apps/nba/challenges/: urls.py
apps/nba/config/: asgi.py  celery.py  settings.py  urls.py
apps/nba/discussions/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/nba/games/: admin.py  apps.py  consumers.py  models.py  services.py  tasks.py  urls.py  views.py
apps/nba/rewards/: apps.py  context_processors.py
(+1113 files in other folders)
