[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-bets"
version = "0.1.0"
description = "NBA betting simulation powered by vinosports-core"
requires-python = ">=3.11"
dependencies = [
    "vinosports-core",
    "psycopg2-binary>=2.9",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html:htmlcov --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/*",
    "manage.py",
    "static/*",
    "templates/*",
]

[tool.coverage.report]
fail_under = 55
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
